force-app/main/default/objects/Pre_Placement_Visit__c/Pre_Placement_Visit__c.object-meta.xml
<CustomObject>
    <label>Pre-Placement Visit</label>
    <nameField>
        <displayFormat>PPI-{00000}</displayFormat>
        <label>Pre-Placement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Placement Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>