force-app/main/default/objects/Pre_Placement_Visit__c/fields/Bonding_Level_Initial_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Bonding_Level_Initial_Assessment__c</fullName>
    <label>Bonding Level (Initial Assessment)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>