force-app/main/default/objects/Pre_Placement_Visit__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Child__c</referenceTo>
    <relationshipLabel>Pre-Placement Visits</relationshipLabel>
    <relationshipName>Pre_Placement_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>