force-app/main/default/objects/Pre_Placement_Visit__c/fields/Child_s_Comfort_with_Environment__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Comfort_with_Environment__c</fullName>
    <label>Child&apos;s Comfort with Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Comfortable</fullName>
            </value>
            <value>
                <fullName>Somewhat Comfortable</fullName>
            </value>
            <value>
                <fullName>Uncomfortable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>