force-app/main/default/objects/Pre_Placement_Visit__c/fields/Child_s_Reaction__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Reaction__c</fullName>
    <label>Child&apos;s Reaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comfortable</fullName>
            </value>
            <value>
                <fullName>Hesitant</fullName>
            </value>
            <value>
                <fullName>Anxious</fullName>
            </value>
            <value>
                <fullName>Excited</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>