force-app/main/default/objects/Pre_Placement_Visit__c/fields/Concerns_Identified__c.field-meta.xml
<CustomField>
    <fullName>Concerns_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concerns Identified?</label>
    <type>Checkbox</type>
</CustomField>