force-app/main/default/objects/Pre_Placement_Visit__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pre-Placement Visits</relationshipLabel>
    <relationshipName>Pre_Placement_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>