force-app/main/default/objects/Pre_Placement_Visit__c/fields/Family_Account__c.field-meta.xml
<CustomField>
    <fullName>Family_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family Account</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Pre-Placement Visits</relationshipLabel>
    <relationshipName>Pre_Placement_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>