force-app/main/default/objects/Pre_Placement_Visit__c/fields/Final_Decision_After_Visit__c.field-meta.xml
<CustomField>
    <fullName>Final_Decision_After_Visit__c</fullName>
    <label>Final Decision After Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proceed with Placement</fullName>
            </value>
            <value>
                <fullName>Require Further Visits</fullName>
            </value>
            <value>
                <fullName>Not a Suitable Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>