force-app/main/default/objects/Pre_Placement_Visit__c/fields/Follow_Up_Actions_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Actions_Required__c</fullName>
    <label>Follow-Up Actions Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Visit Needed</fullName>
            </value>
            <value>
                <fullName>Counselling Recommended</fullName>
            </value>
            <value>
                <fullName>More Information Requested</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>