force-app/main/default/objects/Pre_Placement_Visit__c/fields/Foster_Parent_s_Observations__c.field-meta.xml
<CustomField>
    <fullName>Foster_Parent_s_Observations__c</fullName>
    <label>Foster Parent’s Observations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>