force-app/main/default/objects/Pre_Placement_Visit__c/fields/Pre_Placement_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Placement_Visit_Date__c</fullName>
    <label>Pre-Placement Visit Date</label>
    <type>Date</type>
</CustomField>