force-app/main/default/objects/Pre_Placement_Visit__c/fields/Sibling_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Sibling_Interaction__c</fullName>
    <label>Sibling Interaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>