force-app/main/default/objects/Pre_Placement_Visit__c/fields/Specify_Neutral_Location_Visit__c.field-meta.xml
<CustomField>
    <fullName>Specify_Neutral_Location_Visit__c</fullName>
    <label>Specify Neutral Location Visit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>