force-app/main/default/objects/Pre_Placement_Visit__c/fields/Supervision_Required__c.field-meta.xml
<CustomField>
    <fullName>Supervision_Required__c</fullName>
    <label>Supervision Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>