force-app/main/default/objects/Pre_Placement_Visit__c/fields/Support_Services_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Support_Services_Recommended__c</fullName>
    <label>Support Services Recommended</label>
    <length>255</length>
    <type>Text</type>
</CustomField>