force-app/main/default/objects/Pre_Placement_Visit__c/fields/Visit_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_End_Time__c</fullName>
    <inlineHelpText>helpful for duration tracking</inlineHelpText>
    <label>Visit End Time</label>
    <type>DateTime</type>
</CustomField>