force-app/main/default/objects/Pre_Placement_Visit__c/fields/Visit_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Visit_Location_Address__c</fullName>
    <inlineHelpText>if not foster home or agency</inlineHelpText>
    <label>Visit Location Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>