force-app/main/default/objects/Pre_Placement_Visit__c/fields/Visit_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Start_Time__c</fullName>
    <label>Visit Start Time</label>
    <type>DateTime</type>
</CustomField>