force-app/main/default/objects/Pre_Placement_Visit__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Home Visit</fullName>
            </value>
            <value>
                <fullName>Virtual Meeting</fullName>
            </value>
            <value>
                <fullName>Neutral Location Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>